--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li>Reduzir: Consumir menos e minimizar o desperdício.</li>
                     <li>Reutilizar: Usar itens novamente em vez de descartá-los.</li>
                     <li>Reciclar: Processar materiais para criar novos produtos.</li>
-                    <li>Compostar: Transformar resíduos orgânicos em nutrientes para a terra.</li>
+                    <li>Reaproveitar: Transformar resíduos orgânicos em nutrientes para a terra.</li>
                 </ul>
             </section>
             <section>
